force-app/main/default/objects/DetalleComision__c/DetalleComision__c.object-meta.xml
<CustomObject>
    <label>Detalle Comisión</label>
    <nameField>
        <displayFormat>DETC-{0000}</displayFormat>
        <label>Nombre de Detalle Comisión</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalles comisión</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>