force-app/main/default/objects/DetalleComision__c/fields/Comision__c.field-meta.xml
<CustomField>
    <fullName>Comision__c</fullName>
    <description>Comisión en la que se engloba cada registro</description>
    <label>Comisión</label>
    <referenceTo>Comision__c</referenceTo>
    <relationshipLabel>Detalles comisión</relationshipLabel>
    <relationshipName>DetallesComision</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>