force-app/main/default/objects/DetalleComision__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <description>Concepto de comisones extras</description>
    <label>Concepto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>