force-app/main/default/objects/DetalleComision__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Importe de comisiones extras</description>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>