force-app/main/default/objects/DetalleComision__c/fields/ImporteContrato__c.field-meta.xml
<CustomField>
    <fullName>ImporteContrato__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Comisión acumulada para el Producto Oportunidad en hito Contrato</description>
    <label>Importe Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>