force-app/main/default/objects/DetalleComision__c/fields/ImporteEscrituracion__c.field-meta.xml
<CustomField>
    <fullName>ImporteEscrituracion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Comisión acumulada para el Producto Oportunidad en hito Escrituración</description>
    <label>Importe Escrituración</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>