force-app/main/default/objects/DetalleComision__c/fields/ImportePosventa__c.field-meta.xml
<CustomField>
    <fullName>ImportePosventa__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Comisión acumulada para el Producto Oportunidad en hito Posventa</description>
    <label>Importe Posventa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>