force-app/main/default/objects/DetalleComision__c/fields/ImporteReserva__c.field-meta.xml
<CustomField>
    <fullName>ImporteReserva__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Comisión acumulada para el Producto Oportunidad en hito Reserva</description>
    <label>Importe Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>