force-app/main/default/objects/DetalleComision__c/fields/ProductoOportunidad__c.field-meta.xml
<CustomField>
    <fullName>ProductoOportunidad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Producto de Oportunidad al que está asociada la comisión Fija</description>
    <label>Producto Oportunidad</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Producto de Oportunidad</relationshipLabel>
    <relationshipName>DetallesComision</relationshipName>
    <type>Lookup</type>
</CustomField>