force-app/main/default/objects/DetalleComision__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Promoción relacionada</description>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Promoción</relationshipLabel>
    <relationshipName>DetallesComisionPromocion</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>