force-app/main/default/objects/DetalleComision__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo de comisión, Fija (por hito) o Extra (manual)</description>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fija</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>