force-app/main/default/objects/DetalleComision__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Vendedor al que aplica el registro</description>
    <label>Vendedor</label>
    <referenceTo>Vendedor__c</referenceTo>
    <relationshipLabel>Detalles comisión</relationshipLabel>
    <relationshipName>DetallesComision</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>